--- a/0x00-html_advanced/1-index.html
+++ b/0x00-html_advanced/1-index.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Your Page Title</title>
-  </head>
-  <body>
-    <!-- Your page content goes here -->
-  </body>
+  <head></head>
+  <body></body>
 </html>
