--- a/0x00-html_advanced/9-index.html
+++ b/0x00-html_advanced/9-index.html
@@ -15,7 +15,7 @@
     <main>
         <h1>Homepage</h1>
         <section><h2>We help you build your brand!</h2></section>
-        <section><h3>Services</h3></section>
+        <section><h2>Services</h2></section>
         <section>
             <h2>Works</h2>
             <article>Work 1</article>
@@ -23,7 +23,7 @@
             <article>Work 3</article>
         </section>
         <section>
-            <h2>About us</h2>
+            <h2>About Us</h2>
         </section>
         <section>
             <h2>Latest news</h2>
