--- a/0x00-html_advanced/20-index.html
+++ b/0x00-html_advanced/20-index.html
@@ -14,7 +14,7 @@
     <header>
         <div>
         <a href="/">
-        <span> Techium </span>
+            <span> Techium </span>
         </a>
         </div>
         <nav>
@@ -24,7 +24,7 @@
             <a href="#about">About</a>
             <a href="#latest_news">Latest_news</a>
             <a href="#testimonials">Testimonials</a>
-            <a href="#contact">Contact</a>
+            <a href="#contact">Contact<
         </nav>
       </div>
     </header>
