--- a/0x00-html_advanced/18-index.html
+++ b/0x00-html_advanced/18-index.html
@@ -12,10 +12,11 @@
     <br>
     <!-- Header -->
     <header>
+      <div>
         <div>
-        <a href="/">
+          <a href="/">
             <span> Techium </span>
-        </a>
+          </a>
         </div>
         <nav></nav>
       </div>
