--- a/0x00-html_advanced/20-index.html
+++ b/0x00-html_advanced/20-index.html
@@ -12,20 +12,13 @@
     <br>
     <!-- Header -->
     <header>
+      <div>
         <div>
-        <a href="/">
+          <a href="/">
             <span> Techium </span>
-        </a>
+          </a>
         </div>
-        <nav>
-            <a href="/">Home</a>
-            <a href="#services">Services</a>
-            <a href="#works">Works</a>
-            <a href="#about">About</a>
-            <a href="#latest_news">Latest_news</a>
-            <a href="#testimonials">Testimonials</a>
-            <a href="#contact">Contact<
-        </nav>
+        <nav></nav>
       </div>
     </header>
     <br>
