--- a/0x00-html_advanced/contact.html
+++ b/0x00-html_advanced/contact.html
@@ -14,7 +14,7 @@
     <header>
         <div>
         <a href="/">
-        <span> Techium </span>
+            <span> Techium </span>
         </a>
         </div>
         <nav></nav>
@@ -23,7 +23,7 @@
     <br>
     <!-- Main -->
     <main>
-      <h1>Homepage</h1>
+      <h1>ontact</h1>
       <br>
       <!-- Hero section -->
       <section>
