--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -12,21 +12,19 @@
     <br>
     <!-- Header -->
     <header>
-      <div>
         <div>
-          <a href="/">
-            <span> Techium </span>
-          </a>
+        <a href="/">
+        <span> Techium </span>
+        </a>
         </div>
         <nav>
-          <a href="/">Home</a>
-          <a href="#services">Services</a>
-          <a href="#works">Works</a>
-          <a href="#about">About</a>
-          <a href="#latest_news">Latest_news</a>
-          <a href="#testimonials">Testimonials</a>
-          <a href="#contact">Contact
-        </nav>
+            <a href="/">Home</a>
+            <a href="#services">Services</a>
+            <a href="#works">Works</a>
+            <a href="#about">About</a>
+            <a href="#latest_news">Latest_news</a>
+            <a href="#testimonials">Testimonials</a>
+            <a href="#contact">Contact</a>
         </nav>
       </div>
     </header>
@@ -34,6 +32,7 @@
     <!-- Main -->
     <main>
       <h1>Homepage</h1>
+      <a href="#">Get started</a>
       <br>
       <!-- Hero section -->
       <section>
@@ -112,6 +111,7 @@
             maxime cum!
             </p>
           </div>
+          <a href="about.html">Learn more about us</a>
         </div>
       </section>
       <br>
@@ -184,13 +184,18 @@
               contraria sunt his, malane?
             </p>
           </div>
+          <a href="contact.html">Get in touch</a>
         </div>
       </section>
     </main>
     <br>
     <!-- Footer -->
     <footer>
-      <div>Footer</div>
+      <div>
+        <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
+        <a href="https://twitter.com/holbertonschool">Twitter</a>
+        <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
+      </div>
     </footer>
   </body>
 </html>
