--- a/0x00-html_advanced/23-index.html
+++ b/0x00-html_advanced/23-index.html
@@ -12,21 +12,19 @@
     <br>
     <!-- Header -->
     <header>
-      <div>
         <div>
-          <a href="/">
-            <span> Techium </span>
-          </a>
+        <a href="/">
+        <span> Techium </span>
+        </a>
         </div>
         <nav>
-          <a href="/">Home</a>
-          <a href="#services">Services</a>
-          <a href="#works">Works</a>
-          <a href="#about">About</a>
-          <a href="#latest_news">Latest_news</a>
-          <a href="#testimonials">Testimonials</a>
-          <a href="#contact">Contact
-        </nav>
+            <a href="/">Home</a>
+            <a href="#services">Services</a>
+            <a href="#works">Works</a>
+            <a href="#about">About</a>
+            <a href="#latest_news">Latest_news</a>
+            <a href="#testimonials">Testimonials</a>
+            <a href="#contact">Contact</a>
         </nav>
       </div>
     </header>
@@ -34,6 +32,7 @@
     <!-- Main -->
     <main>
       <h1>Homepage</h1>
+      <a href="#">Get started</a>
       <br>
       <!-- Hero section -->
       <section>
@@ -50,12 +49,12 @@
             <p>We work with you</p>
           </header>
           <div>
-            <h3>Design & Concept</h3>
-            <h3>Digital Strategy</h3>
-            <h3>Content Strategy</h3>
-            <h3>UX Design</h3>
-            <h3>Web Development</h3>
-            <h3>Social Media</h3>
+            <h3><a href="#">Design & Concept</a></h3>
+            <h3><a href="#">Digital Strategy</a></h3>
+            <h3><a href="#">Content Strategy</a></h3>
+            <h3><a href="">UX Design</a></h3>
+            <h3><a href="#">Web Development</a></h3>
+            <h3><a href="#">Social Media</a></h3>
           </div>
           
         </div>
@@ -70,13 +69,13 @@
           </header>
           <div>
             <article>
-              <h3>Interior Design</h3>
+              <h3><a href="#">Interior Design</a></h3>
             </article>
             <article>
-              <h3>Web Development</h3>
+              <h3><a href="#">Web Development</a></h3>
             </article>
             <article>
-              <h3>Personal Brand</h3>
+              <h3><a href="#">Personal Brand</a></h3>
             </article>
           </div>
         </div>
@@ -112,6 +111,7 @@
             maxime cum!
             </p>
           </div>
+          <a href="about.html">Learn more about us</a>
         </div>
       </section>
       <br>
@@ -124,7 +124,7 @@
         <div>
           <article>
             <p>Career</p>
-            <h3>Hoc loco tenere se Triarius non potuit.</h3>
+            <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id
               Sextilius factum negabat. Quo tandem modo? At eum nihili facit;
@@ -133,7 +133,7 @@
           </article>
           <article>
             <p>Digital Life</p>
-            <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+            <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi
               Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne
@@ -143,7 +143,7 @@
           </article>
           <article>
             <p>Social</p>
-            <h3>Bestiarum vero nullum iudicium puto.</h3>
+            <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non
               igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis?
@@ -184,13 +184,18 @@
               contraria sunt his, malane?
             </p>
           </div>
+          <a href="contact.html">Get in touch</a>
         </div>
       </section>
     </main>
     <br>
     <!-- Footer -->
     <footer>
-      <div>Footer</div>
+      <div>
+        <a href="https://www.facebook.com/HolbertonSchool/">Facebook</a>
+        <a href="https://twitter.com/holbertonschool">Twitter</a>
+        <a href="https://www.instagram.com/holbertonschool/">Instagram</a>
+      </div>
     </footer>
   </body>
 </html>
