--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -12,19 +12,20 @@
     <br>
     <!-- Header -->
     <header>
+      <div>
         <div>
-        <a href="/">
-        <span> Techium </span>
-        </a>
+          <a href="/">
+            <span> Techium </span>
+          </a>
         </div>
         <nav>
-            <a href="/">Home</a>
-            <a href="#services">Services</a>
-            <a href="#works">Works</a>
-            <a href="#about">About</a>
-            <a href="#latest_news">Latest_news</a>
-            <a href="#testimonials">Testimonials</a>
-            <a href="#contact">Contact</a>
+          <a href="/">Home</a>
+          <a href="#services">Services</a>
+          <a href="#works">Works</a>
+          <a href="#about">About</a>
+          <a href="#latest_news">Latest news</a>
+          <a href="#testimonials">Testimonials</a>
+          <a href="#contact">Contact</a>
         </nav>
       </div>
     </header>
@@ -32,12 +33,12 @@
     <!-- Main -->
     <main>
       <h1>Homepage</h1>
-      <a href="#">Get started</a>
       <br>
       <!-- Hero section -->
       <section>
         <div>
           <h2>We help you build your brand!</h2>
+          <a href="#">Get started</a>
         </div>
       </section>
       <br>
