--- a/0x00-html_advanced/contact.html
+++ b/0x00-html_advanced/contact.html
@@ -12,10 +12,11 @@
     <br>
     <!-- Header -->
     <header>
+      <div>
         <div>
-        <a href="/">
+          <a href="/">
             <span> Techium </span>
-        </a>
+          </a>
         </div>
         <nav></nav>
       </div>
@@ -23,7 +24,7 @@
     <br>
     <!-- Main -->
     <main>
-      <h1>ontact</h1>
+      <h1>Homepage</h1>
       <br>
       <!-- Hero section -->
       <section>
