--- a/0x00-html_advanced/29-index.html
+++ b/0x00-html_advanced/29-index.html
@@ -22,13 +22,13 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#works">Works</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#latest_news">Latest news</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-          <li><a href="#contact">Contact</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#works">Works</a></li>
+            <li><a href="#about">About</a</li>
+            <li><a href="#latest_news">Latest news</a></li>
+            <li> <a href="#testimonials">Testimonials</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -168,9 +168,24 @@
           <p>We are more than a digital company</p>
         </header>
         <div>
-          <article>Testimonial 1</article>
-          <article>Testimonial 2</article>
-          <article>Testimonial 3</article>
+          <article>
+            <blockquote>
+                <cite>Yuri Y.</cite>
+                <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
+            </blockquote>
+          </article>
+          <article>
+            <blockquote>
+                <cite>Dorrie S.</cite>
+                <p>Thank you so much for your help. Techium company is awesome! </p>
+            </blockquote>
+          </article>
+          <article>
+            <blockquote>
+                <cite>Sven H.</cite>
+                <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
+            </blockquote>
+          </article>
         </div>
       </div>
     </section>
@@ -197,13 +212,21 @@
   <!-- Footer -->
   <footer>
     <div>
-      <ul>
-        <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
-        <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-        <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
-      </ul>
+        <ul>
+            <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+            <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+            <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+        </ul>
+    </div>
+    <hr>
+    <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
+    <div>
+        <ul>
+            <li><a href="#">Terms of Use</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Cookie Policy</a></li>
+        </ul>
     </div>
   </footer>
 </body>
-
 </html>
