--- a/0x00-html_advanced/34-styleguide.html
+++ b/0x00-html_advanced/34-styleguide.html
@@ -155,7 +155,7 @@
       </section>
       <!--Details-->
       <section>
-        <header>Details</header>
+        <header><h2>Details</h2></header>
         <div>
             <h3>
                 Default
