--- a/0x00-html_advanced/34-styleguide.html
+++ b/0x00-html_advanced/34-styleguide.html
@@ -153,28 +153,26 @@
           </tbody>
         </table>
       </section>
-      <!--Details-->
+      <!-- Details -->
       <section>
-        <header><h2>Details</h2></header>
+        <header>
+          <h2>Details</h2>
+        </header>
         <div>
-            <h3>
-                Default
-            </h3>
-            <details>
-                <summary>
-                    Show/Hide me
-                </summary>
-                <p>summary: Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-            </details>
+          <h3>Default</h3>
+          <details>
+            <summary>
+              Show/Hide me
+            </summary>
+            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+          </details>
         </div>
         <div>
-            <h3>Open</h3>
-            <details>
-                <summary>
-                    Always Open
-                </summary>
-                <p>summary: Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-            </details>
+          <h3>Open</h3>
+          <details open>
+            <summary>Always open</summary>
+            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+          </details>
         </div>
       </section>
     </main>
