--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -17,7 +17,7 @@
     <div>
       <div>
         <a href="/">
-          <span> Techium </span>
+            <img src="logo-black.png" alt="Techium logo" width="160" height="40">
         </a>
       </div>
       <nav>
@@ -74,12 +74,21 @@
         </header>
         <div>
           <article>
+            <div>
+                <img src="images/pic-work-01.jpg" alt="empty">
+            </div>
             <h3><a href="#">Interior Design</a></h3>
           </article>
           <article>
+            <div>
+                <img src="images/pic-work-02.jpg" alt="empty">
+            </div>
             <h3><a href="#">Web Development</a></h3>
           </article>
           <article>
+            <div>
+                <img src="images/pic-work-03.jpg" alt="empty">
+            </div>
             <h3><a href="#">Personal Brand</a></h3>
           </article>
         </div>
@@ -94,6 +103,7 @@
           <p>Everything about us</p>
         </header>
         <div>
+            <img src="images/pic-about-us.jpg" alt="empty" width="460" height="447">
           <h3>Who are we</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum,
@@ -128,6 +138,9 @@
         </header>
         <div>
           <article>
+            <div>
+                <img src="images/pic-blog-01.jpg" alt="empty" width="305" height="205">
+            </div>
             <p>Career</p>
             <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
             <p>
@@ -135,9 +148,12 @@
               Sextilius factum negabat. Quo tandem modo? At eum nihili facit;
               Quae contraria sunt his, malane?
             </p>
-            <small>By Kelly D.</small>
+            <small> By Kelly D.</small>
           </article>
           <article>
+            <div>
+                <img src="images/pic-blog-01.jpg" alt="empty" width="305" height="205">
+            </div>
             <p>Digital Life</p>
             <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
             <p>
@@ -149,6 +165,9 @@
             <small>By William A.</small>
           </article>
           <article>
+            <div>
+                <img src="images/pic-blog-03.jpg" alt="empty" width="305" height="205">
+            </div>
             <p>Social</p>
             <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
             <p>
@@ -157,8 +176,8 @@
               Pugnant Stoici cum Peripateticis. Prioris generis est docilitas,
               memoria; Apparet statim, quae sint officia, quae actiones.
             </p>
-            <small>By Frances J.</small>
           </article>
+          <small>By Frances J.</small>
         </div>
       </div>
     </section>
@@ -172,18 +191,21 @@
         </header>
         <div>
           <article>
+            <img src="images/pic-work-01.jpg" alt="Yuri Y. avatar" width="100" height="100">
             <blockquote>
                 <cite>Yuri Y.</cite>
                 <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
             </blockquote>
           </article>
           <article>
+            <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100" height="100">
             <blockquote>
                 <cite>Dorrie S.</cite>
                 <p>Thank you so much for your help. Techium company is awesome! </p>
             </blockquote>
           </article>
           <article>
+            <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100">
             <blockquote>
                 <cite>Sven H.</cite>
                 <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
@@ -214,6 +236,7 @@
   <br>
   <!-- Footer -->
   <footer>
+    <img src="logo-black.png" alt="Techium logo" width="160" height="40">
     <address>
         234 Washington Street
         <br>
