--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -17,18 +17,18 @@
     <div>
       <div>
         <a href="/">
-            <img src="logo-black.png" alt="Techium logo" width="160" height="40">
+          <img src="./logo-black.png" alt="Techium logo" width="160" height="40">
         </a>
       </div>
       <nav>
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#works">Works</a></li>
-            <li><a href="#about">About</a</li>
-            <li><a href="#latest_news">Latest news</a></li>
-            <li> <a href="#testimonials">Testimonials</a></li>
-            <li><a href="#contact">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#works">Works</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#latest_news">Latest news</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -75,19 +75,19 @@
         <div>
           <article>
             <div>
-                <img src="images/pic-work-01.jpg" alt="empty">
+              <img src="./images/pic-work-01.jpg" alt="">
             </div>
             <h3><a href="#">Interior Design</a></h3>
           </article>
           <article>
             <div>
-                <img src="images/pic-work-02.jpg" alt="empty">
+              <img src="./images/pic-work-02.jpg" alt="">
             </div>
             <h3><a href="#">Web Development</a></h3>
           </article>
           <article>
             <div>
-                <img src="images/pic-work-03.jpg" alt="empty">
+              <img src="./images/pic-work-03.jpg" alt="">
             </div>
             <h3><a href="#">Personal Brand</a></h3>
           </article>
@@ -103,7 +103,9 @@
           <p>Everything about us</p>
         </header>
         <div>
-            <img src="images/pic-about-us.jpg" alt="empty" width="460" height="447">
+          <div>
+            <img src="./images/pic-about-us.jpg" alt="" width="460" height="447">
+          </div>
           <h3>Who are we</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum,
@@ -139,7 +141,7 @@
         <div>
           <article>
             <div>
-                <img src="images/pic-blog-01.jpg" alt="empty" width="305" height="205">
+              <img src="./images/pic-blog-01.jpg" alt="" width="305" height="205">
             </div>
             <p>Career</p>
             <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -148,11 +150,11 @@
               Sextilius factum negabat. Quo tandem modo? At eum nihili facit;
               Quae contraria sunt his, malane?
             </p>
-            <small> By Kelly D.</small>
+            <small>By Kelly D.</small>
           </article>
           <article>
             <div>
-                <img src="images/pic-blog-01.jpg" alt="empty" width="305" height="205">
+              <img src="./images/pic-blog-02.jpg" alt="" width="305" height="205">
             </div>
             <p>Digital Life</p>
             <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
@@ -166,7 +168,7 @@
           </article>
           <article>
             <div>
-                <img src="images/pic-blog-03.jpg" alt="empty" width="305" height="205">
+              <img src="./images/pic-blog-03.jpg" alt="" width="305" height="205">
             </div>
             <p>Social</p>
             <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
@@ -176,8 +178,8 @@
               Pugnant Stoici cum Peripateticis. Prioris generis est docilitas,
               memoria; Apparet statim, quae sint officia, quae actiones.
             </p>
+            <small>By Frances J.</small>
           </article>
-          <small>By Frances J.</small>
         </div>
       </div>
     </section>
@@ -191,24 +193,42 @@
         </header>
         <div>
           <article>
-            <img src="images/pic-work-01.jpg" alt="Yuri Y. avatar" width="100" height="100">
+            <div>
+              <img src="./images/pic-person-01.jpg" alt="Yuri Y. avatar" width="100px" height="100px">
+            </div>
             <blockquote>
-                <cite>Yuri Y.</cite>
-                <p>I am completely blown away. Thanks to Techium, we've just launched our 5th website!</p>
+              <cite>
+                Yuri Y.
+              </cite>
+              <p>
+                I am completely blown away. Thanks to Techium, we've just launched our 5th website!
+              </p>
             </blockquote>
           </article>
           <article>
-            <img src="images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100" height="100">
+            <div>
+              <img src="./images/pic-person-02.jpg" alt="Dorrie S. avatar" width="100px" height="100px">
+            </div>
             <blockquote>
-                <cite>Dorrie S.</cite>
-                <p>Thank you so much for your help. Techium company is awesome! </p>
+              <cite>
+                Dorrie S.
+              </cite>
+              <p>
+                Thank you so much for your help. Techium company is awesome!
+              </p>
             </blockquote>
           </article>
           <article>
-            <img src="images/pic-person-03.jpg" alt="Sven H. avatar" width="100" height="100">
+            <div>
+              <img src="./images/pic-person-03.jpg" alt="Sven H. avatar" width="100px" height="100px">
+            </div>
             <blockquote>
-                <cite>Sven H.</cite>
-                <p>I love your system. Definitely worth the investment. I'd be lost without Techium company.</p>
+              <cite>
+                Sven H.
+              </cite>
+              <p>
+                I love your system. Definitely worth the investment. I'd be lost without Techium company.
+              </p>
             </blockquote>
           </article>
         </div>
@@ -236,28 +256,29 @@
   <br>
   <!-- Footer -->
   <footer>
-    <img src="logo-black.png" alt="Techium logo" width="160" height="40">
+    <img src="./logo-black.png" alt="Techium logo" width="160" height="40">
     <address>
-        234 Washington Street
-        <br>
-        Urbana, Illinois
+      234 Washington Street
+      <br>
+      Urbana, Illinois
     </address>
     <div>
-        <ul>
-            <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
-            <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-            <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
-        </ul>
+      <ul>
+        <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
+        <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
+        <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
+      </ul>
     </div>
     <hr>
     <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
     <div>
-        <ul>
-            <li><a href="#">Terms of Use</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Cookie Policy</a></li>
-        </ul>
+      <ul>
+        <li><a href="#">Terms of Use</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Cookie Policy</a></li>
+      </ul>
     </div>
   </footer>
 </body>
+
 </html>
